syntax = "proto3";

package user_attestor;

option go_package = "proto/user_attestor;user_attestor";

// Message definitions
message UserAttestation {
  string access_token = 1;
  string token_type = 2;
  string expiry = 3;
}

// Define the service
service AttestationService {
  rpc GetUserAttestation(Empty) returns (UserAttestation);
}

// Define an empty message type
message Empty {}