syntax = "proto3";

package user_attestor;

option go_package = "proto/user_attestor;user_attestor";

// Message definitions
message UserAttestation {
  string attestation_token = 1;
}

// Define the service
service AttestationService {
  rpc GetUserAttestation(Empty) returns (UserAttestation);
}

// Define an empty message type
message Empty {}